@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.7243 2004/09/25 00:34:26 grant Exp $
+$NetBSD: CHANGES,v 1.7244 2004/09/25 00:40:53 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -4422,3 +4422,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Added vanessa_socket-0.0.7 [grant 2004-09-25]
 	Added vanessa_adt-0.0.6 [grant 2004-09-25]
 	Added mailscanner-4.30.3.2 [grant 2004-09-25]
+	Updated mathomatic to 11.3f [minskim 2004-09-25]
